# BitsMoE

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
bitsmoe/: __init__.py  cli.py
bitsmoe/algorithms/: __init__.py
bitsmoe/algorithms/cpp/: mlp_forward.cu  mlp_forward_binding.cpp
bitsmoe/evaluation/: cli.py  ppl_eval.py
bitsmoe/models/: __init__.py  base_block.py  base_mlp.py  utils.py
bitsmoe/models/auto/: bitsmoe_auto_patch.py
bitsmoe/models/deepseekv2/: bitsmoe_block.py  bitsmoe_mlp.py  configuration_deepseek.py
bitsmoe/models/qwen3moe/: bitsmoe_block.py  bitsmoe_mlp.py
bitsmoe/models/qwen3next/: bitsmoe_block.py  bitsmoe_mlp.py
bitsmoe/quant/: packer.py  quantizer.py
bitsmoe/quant/bitpack/: __init__.py  bitpack_cuda_binding.cpp  bitpack_cuda_kernel.cu
bitsmoe/utils/: dataset.py  expert_utils.py  get_path.py  logger.py  set_seed.py  transformers_compat.py
configs/deepseekv2/: eval.yaml
configs/qwen3moe/: eval.yaml
configs/qwen3next/: eval.yaml
scripts/: __init__.py  demo_inference.py  install_env.sh
